# Optimus-Prune

./: .gitignore  README.md  UsefullGitCommands.md  config_example.h  test.txt
DATASTORE-LOGGER/src/: file_conn.cpp
Main/PubSubInterface/: Makefile  Readme.md
Main/PubSubInterface/src/cpp/app_logic_pub/: CMakeLists.txt  package.xml
Main/PubSubInterface/src/cpp/app_logic_sub/: CMakeLists.txt  package.xml
Main/PubSubInterface/src/cpp/publisher/: CMakeLists.txt  package.xml
Main/PubSubInterface/src/cpp/publisher/src/: talker.cpp
Main/PubSubInterface/src/cpp/subscriber/: CMakeLists.txt  package.xml
Main/PubSubInterface/src/cpp/subscriber/msg/: someMsg.msg
Main/PubSubInterface/src/cpp/subscriber/src/: listener.cpp
Main/SLAM_API/: Makefile  Readme.md  ros_notes.md  sources.md
Main/SLAM_API/resources/: ros_notes.md
Main/SLAM_API/src/cpp/: Makefile  main.cpp
Main/SLAM_API/src/cpp/Icontrollers/: IGPSController.h  IGyroController.h  ILidarController.h
Main/SLAM_API/src/cpp/Ihardware/: GPS.h  Gyro.h  Lidar.h
Main/SLAM_API/src/cpp/Iservices/: IGPSService.h  IGyroService.h  ILidarService.h
Main/SLAM_API/src/cpp/SLAM/: Slam.cpp  Slam.h  slam.cpp  slam.h
Main/SLAM_API/src/cpp/apilib/: CMakeLists.txt  README.md  package.xml
Main/SLAM_API/src/cpp/apilib/include/apilib/Icontrollers/: IGPSController.h  ILidarController.h  IWheelController.h
Main/SLAM_API/src/cpp/apilib/include/apilib/Ihardware/: GPS.h  Lidar.h  Wheel.h
Main/SLAM_API/src/cpp/apilib/include/apilib/Iservices/: IGPS.h  IGPSService.h  ILidar.h  ILidarService.h  IWheelService.h
Main/SLAM_API/src/cpp/apilib/src/controllers/: GPSController.cpp  LidarController.cpp  WheelController.cpp
Main/SLAM_API/src/cpp/apilib/src/hardware/: GPS.cpp  Lidar.cpp  Wheel.cpp
Main/SLAM_API/src/cpp/apilib/src/services/: GPS.cpp  GPSService.cpp  Lidar.cpp  LidarService.cpp  WheelService.cpp
Main/SLAM_API/src/cpp/apilib/src/services/pcd/: 77239.pcd  lidar_ilse_hex.pcd  test.pcd
Main/SLAM_API/src/cpp/controllers/: GPSController.cpp  GyroController.cpp  LidarController.cpp
Main/SLAM_API/src/cpp/hardware/: GPS.cpp  Gyro.cpp  Lidar.cpp
Main/SLAM_API/src/cpp/publisher/: CMakeLists.txt  README.md  package.xml
Main/SLAM_API/src/cpp/publisher/msg/: gps.msg  readGps.msg
Main/SLAM_API/src/cpp/publisher/src/: talker.cpp
Main/SLAM_API/src/cpp/services/: GPSService.cpp  GyroService.cpp  LidarService.cpp  Makefile
Main/SLAM_API/src/cpp/slam/: CMakeLists.txt  README.md  package.xml
Main/SLAM_API/src/cpp/subscriber/: CMakeLists.txt  README.md  package.xml
Main/SLAM_API/src/cpp/subscriber/msg/: wheel.msg
Main/SLAM_API/src/cpp/subscriber/src/: listener.cpp
Main/SLAM_API/src/python/: gpsDatapeer.txt  lidar_ilse_hex.ply  lidar_tree_hex.ply  pcdtoply.py  plytopcd.py
Main/SLAM_API/treeextract/: Readme.md
Main/SLAM_API/treeextract/camera/: 77239.tile.0.pcd  77272.tile.0.pcd
Main/SLAM_API/treeextract/camera/136318/: 136318.c.clusters.pcd  136318.c.ng.clusters.pcd  136318.c.ng.r.clusters.pcd  136318.intermediate.slice.clusters.pcd  136318.intermediate.slice.clusters.regions.pcd  136318.slice.pcd  136318.stem.clusters.pcd  136318.tile.0.pcd
Main/SLAM_API/treeextract/camera/77306/: 77306.c.clusters.pcd  77306.c.ng.clusters.pcd  77306.c.ng.r.clusters.pcd  77306.intermediate.slice.clusters.pcd  77306.intermediate.slice.clusters.regions.pcd  77306.slice.pcd  77306.stem.clusters.pcd  77306.tile.0.pcd
Main/SLAM_API/treeextract/lidar/: lidar_ilse.tile.0.pcd  lidartree.slice.pcd  lidartree.tile.0.pcd
Main/SLAM_API/treeextract/ply/: lidartreeslice.ply  proeftuinwur_ply_77272.99100000000908.ply  proeftuinwur_ply_77306.16899999999441.ply
Main/SLAM_API/treeextract/ply/136318/: 136318-intermediate-regions.ply  136318-intermediate.ply  136318-stem.ply  proeftuinwur_ply_136318.22600000002421.ply
Main/SLAM_API/treeextract/ply/77239/: proeftuinwur_ply_77239.79099999999744.ply
Main/SLAM_API/treeextract/ply/77306/: 77306.intermediate.slice.clusters.ply  77306.intermediate.slice.clusters.regions.ply  77306.ply  (+1 more)
Main/SLAM_API/treeextract/png/: proeftuinwur_ply_136351.42699999999604.ply  proeftuinwur_ply_136384.62899999998626.ply  proeftuinwur_ply_136417.80700000000070.ply
Main/ULTRASONIC_API/src/: Makefile  unitTest
Main/ULTRASONIC_API/src/Headers/: Sensor.hpp  SensorArray.hpp  Ultrasonic.hpp
Main/ULTRASONIC_API/src/cpp/: Sensor.cpp  SensorArray.cpp  Test.cpp  Ultrasonic.cpp
OpenLog_Artemis/: OpenLog_Artemis.ino  README.md  Sensors.ino  autoDetect.ino
ProjectWithoutROSBackup/: README.md
ProjectWithoutROSBackup/Main/SLAM_API/: Readme.md  UsefullGitCommands.md
USB-Monitor/: Makefile  README.md  readArtemis.cpp  readArtemis.hpp
direct_gps_save/: Makefile  main.cpp
esp32_ble/: esp32_ble.ino
sunray/: config.h  robot.cpp  sunray.ino
(+38 files in other folders)
